--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,17 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{{ url_for('static', filename='js/api.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
     {% block head %}{% endblock %}
-    <title>Натрейдил</title>
+    <title>WebApp</title>
 </head>
 <body>
     <nav class="flex justify-between text-3xl my-3">
         <ul class="flex ml-10">
-            <li>Натрейдил</li>
-        </ul>
-        <ul class="flex gap-5 mr-10">
-            <li>Мой аккаунт</li>
-            <li>Выйти</li>
+            <li>TestTask</li>
         </ul>
     </nav>
     <hr>
