--- a/app/templates/api.html
+++ b/app/templates/api.html
@@ -12,6 +12,8 @@
         <button onclick="disconnectClient()">Disconnect Client</button>
         <button onclick="stopServer()">Stop Server</button>
         <button onclick="runServer()">Run Server</button>
+        <button onclick="getModules()">Get Modules</button>
+        <button onclick="getModuleData()">Get Module Data</button>
     </div>
 
     <div class="mt-4">
