--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -24,4 +24,7 @@
     </div>
 </div>
 
+<!-- Скрытый элемент для передачи токена -->
+<span id="token" data-token="{{ token }}" style="display: none;"></span>
+<script src="{{ url_for('static', path='js/chat.js') }}"></script>
 {% endblock %}
