--- a/app/templates/api.html
+++ b/app/templates/api.html
@@ -21,5 +21,6 @@
         <pre id="response"></pre>
     </div>
 </div>
+<script src="{{ url_for('static', path='js/api.js') }}"></script>
 
 {% endblock %}
