--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,6 +19,6 @@
         <button type="submit">Login</button>
     </form>
 </div>
-
+<script src="{{ url_for('static', path='js/login.js') }}"></script>
 
 {% endblock %}
