--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,30 +1,34 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', path='css/chat.css') }}">
+<script src="{{ url_for('static', path='js/chat.js') }}"></script>
+{% endblock %}
+
 {% block content %}
-<div class="flex flex-row">
-    <!-- Список пользователей -->
-    <div class="w-1/4 bg-gray-200 p-4">
-        <h2>Connected Users</h2>
-        <ul id='user-list' class="list-none">
+<div class="connection w-1/4 bg-gray-200 p-1">
+        <h2>Connected Users:</h2>
+        <ul id='user-list' class="users list-none">
         </ul>
     </div>
 
-    <!-- Основной чат -->
-    <div class="flex flex-col items-center w-3/4 p-4">
-        <h1>WebSocket Chat</h1>
-        <h2>Your ID: <span id="ws-id" class="text-green-500"></span></h2>
-        <form action="" onsubmit="sendMessage(event)">
-            <input class="bg-green-300" type="text" id="messageText" autocomplete="off"/>
+<div class="wrapper ">
+
+    <div class="chat flex flex-col items-center p-7">
+        <h1 style="margin-bottom: 10px; font-size: 18px; font-weight: 500;">WebSocket Chat</h1>
+        <h2 style="margin-bottom: 20px; font-size: 18px; font-weight: 500">Your ID: <span id="ws-id" class="ws_id" ></span></h2>
+
+        <ul class="messages" id='messages' class="list-none mt-4">
+        </ul>
+        <form class="form" action="" onsubmit="sendMessage(event)">
+            <input class="input" type="text" id="messageText" autocomplete="off"/>
             <button>Send</button>
         </form>
-        <ul id='messages' class="list-none mt-4">
-        </ul>
         <div id="server-status" class="hidden text-red-500 mt-4"></div> <!-- Поле для вывода сообщения о статусе сервера -->
         <button id="reconnect-btn" class="hidden mt-4 p-2 bg-blue-500 text-white" onclick="reconnect()">Reconnect</button>
     </div>
 </div>
 
-<!-- Скрытый элемент для передачи токена -->
 
 <script src="{{ url_for('static', path='js/chat.js') }}"></script>
 {% endblock %}
